# unitcellapp

./: .dockerignore  .gitignore  Dockerfile  INSTALL.md  LICENSE  Procfile  README.md  docker.sh  electron.bat  pyinstaller.bat  pyinstaller.spec  pyproject.toml  requirements.txt  unitcellapp.py  unitcellapp.spec
.circleci/: config.yml
.github/workflows/: docker-publish-ghcr.yml  electron-build.yml
binder/: README.md  apt.txt  environment.yml  flaskserverextension.py  postBuild
dashboard/: app.py  cache.py  callbacks.py  database_graph_Diamond.pkl  database_graph_Fluorite.pkl  database_graph_Hexagonal honeycomb.pkl  database_graph_IsoTruss.pkl  database_graph_Kelvin cell.pkl  database_graph_Re-entrant honeycomb.pkl  database_graph_Re-entrant.pkl  database_graph_Triangular honeycomb rotated.pkl  database_graph_Triangular honeycomb.pkl  database_walledtpms_IWP.pkl  database_walledtpms_SplitP.pkl  index.py  layout.py
dashboard/assets/: style.css
dashboard/cache/: data_graph_Body centered cubic.pkl  data_graph_Diamond.pkl  data_graph_Face centered cubic.pkl  data_graph_Fluorite.pkl  data_graph_Hexagonal honeycomb.pkl  data_graph_IsoTruss.pkl  data_graph_Kelvin cell.pkl  data_graph_Octet.pkl  data_graph_Re-entrant honeycomb.pkl  data_graph_Re-entrant.pkl  data_graph_Simple cubic.pkl  data_graph_Square honeycomb rotated.pkl  data_graph_Square honeycomb.pkl  data_graph_Triangular honeycomb rotated.pkl  data_graph_Triangular honeycomb.pkl  data_graph_Truncated cube.pkl  data_graph_Truncated octahedron.pkl  data_graph_Weaire-Phelan.pkl  data_walledtpms_Diamond.pkl  data_walledtpms_Gyroid.pkl  data_walledtpms_IWP.pkl  data_walledtpms_Lidinoid.pkl  data_walledtpms_Neovius.pkl  data_walledtpms_Schwarz.pkl  data_walledtpms_SplitP.pkl  database_graph_Body centered cubic.pkl  database_graph_Face centered cubic.pkl  database_graph_Octet.pkl  database_graph_Simple cubic.pkl  database_graph_Square honeycomb rotated.pkl  database_graph_Square honeycomb.pkl  database_graph_Truncated cube.pkl  database_graph_Truncated octahedron.pkl  database_graph_Weaire-Phelan.pkl  database_walledtpms_Diamond.pkl  database_walledtpms_Gyroid.pkl  database_walledtpms_Lidinoid.pkl  database_walledtpms_Neovius.pkl  database_walledtpms_Schwarz.pkl  images_graph_Body centered cubic.pkl  (+42 more)
dashboard/static/examples/: example-unitar.json
docker/: Dockerfile  environment.yml  gunicorn.config.py
electron/: INSTALL.md  README.md  loading.css  loading.html  main.js  package.json  version.py
pyinstaller/: README.md  main.py
src/unitcellapp/: __init__.py  _version.py  app.py  cache.py  callbacks.py  customeval.py  index.py  layout.py  options.py
src/unitcellapp/cache/: data_graph_Body centered cubic.pkl  data_graph_Diamond.pkl  data_graph_Face centered cubic.pkl  data_graph_Fluorite.pkl  data_graph_Hexagonal honeycomb.pkl  data_graph_IsoTruss.pkl  data_graph_Kelvin cell.pkl  data_graph_Octet.pkl  data_graph_Re-entrant honeycomb.pkl  data_graph_Re-entrant.pkl  data_graph_Simple cubic.pkl  data_graph_Square honeycomb rotated.pkl  data_graph_Square honeycomb.pkl  data_graph_Triangular honeycomb rotated.pkl  data_graph_Triangular honeycomb.pkl  data_graph_Truncated cube.pkl  data_graph_Truncated octahedron.pkl  data_graph_Weaire-Phelan.pkl  data_walledtpms_Diamond.pkl  data_walledtpms_Gyroid.pkl  data_walledtpms_IWP.pkl  data_walledtpms_Lidinoid.pkl  data_walledtpms_Neovius.pkl  data_walledtpms_Schwarz.pkl  data_walledtpms_SplitP.pkl  images_graph_Diamond.pkl  images_graph_Kelvin cell.pkl  images_graph_Octet.pkl  images_graph_Square honeycomb rotated.pkl  images_walledtpms_Diamond.pkl  images_walledtpms_Lidinoid.pkl  images_walledtpms_Schwarz.pkl  surrogates_graph_Body centered cubic.pkl  surrogates_graph_Diamond.pkl  surrogates_graph_Face centered cubic.pkl  surrogates_graph_Fluorite.pkl  surrogates_graph_Hexagonal honeycomb.pkl  surrogates_graph_IsoTruss.pkl  surrogates_graph_Kelvin cell.pkl  surrogates_graph_Octet.pkl  (+17 more)
src/unitcellapp/static/examples/: example-crushable.json
