[project]
name = "unitcellapp"
description = "Lattice unitcell geometry and analysis framework"
version = "0.0.20-dev3"
readme = "README.md"
requires-python = ">=3.10, <3.12"
license = {file = "LICENSE"}
keywords = ["unitcell", "unitcellhub", "lattice", "design"]
authors = [
    {name = "Ryan Watkins", email = "watkinrt@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "blosc>=1.11.2",
    "dash-bootstrap-components>=1.6.0",
    "dash-vtk>=0.0.9",
    "dash==2.6.0",
    "dill>=0.3.9",
    "flask<2.3.0",
    "gunicorn>=23.0.0 ; sys_platform == 'linux'",
    "meshio>=5.3.5",
    "numexpr>=2.10.1",
    "numpy<2.0.0",
    "pyvista>=0.44.1",
    "scikit-learn==1.0.2",
    "vtk>=9.3.1",
    "waitress>=3.0.0",
    "unitcellengine>=0.0.12",
]

[project.urls]
"Homepage" = "https://github.com/unitcellhub/unitcellapp"
"Bug Reports" = "https://github.com/unitcellhub/unitcellapp/issues"

[project.scripts]
debug = "unitcellapp.index:debug"
production = "unitcellapp.index:production"
cache = "unitcellapp.cache:cacheCreate"


[tool.bumpversion]
current_version = "0.0.20-dev3"
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        -                             # dash separator for pre-release section
        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
    )?                                # pre-release section is optional
"""
serialize = [
    "{major}.{minor}.{patch}-{pre_l}{distance_to_latest_tag}",
    "{major}.{minor}.{patch}",
]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
pre_commit_hooks = ["uv sync", "git add uv.lock"]
commit_args = ""

[tool.bumpversion.parts.pre_l]
values = ["dev", "final"]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "src/unitcellapp/__init__.py"

[[tool.bumpversion.files]]
filename = "electron/package.json"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"   

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
    "pyinstaller>=6.10.0",
    "memory-profiler>=0.61.0",
    "ipython>=8.31.0",
]


